--- a/index.html
+++ b/index.html
@@ -23,5 +23,86 @@
                             href="Sign-up.html">Sign in</a> </button></li>
             </ul>
         </div>
+        <center>
+            <h1 style="font-size: 35px; color: white; font-weight: 900; margin-top: 50px;">My Portfolio Project</h1><br>
+            <p style="font-size: 20px; color: white;">My name is Brian Odhiambo Otieno<br>
+                I am a software development student at Moringa school. <br>
+                I joined Moringa as a newbie to coding in November.<br>
+                I have made tremendous steps so far</p>
+        </center>
+    </div>
+    <center>
+        <h3 style="font-size: 30px; color: blue; font-style: italic;">My projects</h3>
+    </center>
+    <div class="projects">
+        <div id="proj">
+            <h4><a href="https://otybrian.github.io/burgerpalace2/" style="text-decoration: none;">The Burger project</a></h4>
+            <p>The burger palace project <br>
+                involved recreating the landing<br>
+                page of a burger restaurant called <br>
+                was done and deployed in github <br>
+                as an individual work. The <br>
+               technologies used include; HTML <br>
+                and CSS<br>
+               Click the button below to view the project</p><br>
+            <button
+                style="border: solid blue; height: 40px; width: 70px; border-radius: 15px; background-color: blue;">
+                <a href="https://otybrian.github.io/burgerpalace2/" style="text-decoration: none; color: white;">Visit</a></button>
+        </div>
+        <div id="proj">
+            <h4><a href="https://otybrian.github.io/letuce-eat/" style=" text-decoration: none;">Letuce eat</a></h4>
+            <p>Letuce eat project <br>
+                involved recreating the landing<br>
+                page of a restaurant called <br>
+                was done and deployed in github <br>
+                as an individual work. The <br>
+               technologies used include; HTML <br>
+                and CSS<br>
+               Click the button below to view the project</p><br>
+            <button
+                style="border: solid blue; height: 40px; width: 70px; border-radius: 15px; background-color: blue;">
+                <a href="https://otybrian.github.io/letuce-eat/" style=" text-decoration: none; color: white;">Visit</a></button>
+        </div>
+        <div id="proj">
+            <h4><a href="https://otybrian.github.io/project-two/" style="text-decoration: none;">Project2</a></h4>
+            <p>Project 2 is a special project to me.<br>
+                It was the initial attempt to recreating the <br>
+                landing page of a burger restaurant called <br>
+                was done and deployed in github <br>
+                as an individual work. The <br>
+               technologies used include; HTML <br>
+                and CSS<br>
+               Click the button below to view the project</p><br>
+            <button
+                style="border: solid blue; height: 40px; width: 70px; border-radius: 15px; background-color: blue;">
+                <a href="https://otybrian.github.io/project-two/" style="text-decoration: none; color: white;">Visit</a></button>
+        </div>
+    </div>
+    <div class="footer">
+        <div id="projects">
+            <h4>My projecs</h4>
+            <ul>
+                <li><a href="https://otybrian.github.io/burgerpalace2/" style="color: white; text-decoration: none;">The Burger project</a></li>
+                <li><a href="https://otybrian.github.io/letuce-eat/" style="color: white; text-decoration: none;">Letuce eat</a></li>
+                <li><a href="https://otybrian.github.io/project-two/" style="color: white; text-decoration: none;">Project2</a></li>
+            </ul>
+        </div>
+        <div id="languages">
+            <h4>Languages used</h4>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+            </ul>
+        </div>
+        <div id="contact">
+            <h4>Contact Information</h4>
+            <ul>
+                <li>Address: Kasarani, Nairobi-Kenya</li>
+                <li>Email: brian.otieno@student.moringaschool.com</li>
+                <li>Telephone: +254702661411, +254115854571</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
