add the icons section on html

--- a/index.html
+++ b/index.html
@@ -104,5 +104,16 @@
             </ul>
         </div>
     </div>
+    <div class="icons">
+        <p id="copy">Copyright @2021</p>
+        <div id="platforms">
+            <img src="images/twitter (1).png" height="30px">
+            <img src="images/facebook (1).png" height="30px">
+            <img src="images/skype.png" height="30px">
+            <img src="images/you_tube.png" height="30px">
+            <img src="images/g_plus.png" height="30px">
+        </div>
+        <p id="right">All Rights Reserved</p>
+    </div>
 </body>
 </html>
