add section2 in the about html file

--- a/about.html
+++ b/about.html
@@ -27,4 +27,41 @@
                 and my career goals after finishing my course at Moringa School</strong></p>
         </center>
     </div>
+    <div class="section2">
+        <img src="images/me.jpg" height="300" width="350"
+            style="border: solid white; box-shadow: 5px 5px whitesmoke; border-radius: 15px; margin-top: -20px;">
+        <div id="box">
+            <h4>Personal Information</h4>
+            <p>My name is Brian Otieno.<br>
+                I'm a software development<br>
+                student at Moringa school<br>
+                in the Prep module. <br>
+                sI stay in Kasarani, Nairobi. <br>
+                My plan is to specialize on <br>
+                web development when I get to<br>
+                the core module</p>
+        </div>
+        <div id="box">
+            <h4>Education Background</h4>
+            <p>Currently I'm a student at <br>
+               Moringa school. Before Moringa<br>
+                school, I pursued BSc in Wildlife<br>
+                Management and Conservation at <br>
+                The University of Nairobi.<br>
+                I went to Chulaimbo Boys High <br>
+                School for my O' levels, and<br>
+                my primary school is hard to spell</p>
+        </div>
+        <div id="box">
+            <h4>Thrills in Programming</h4>
+            <p>Technology is the way to go<br>
+                especially with the pandemic,<br>
+                online jobs prooved to have stood<br>
+                the tests of time.<br>
+                I also enjoy commanding the <br>
+                computer in a language that <br>
+                only me and other programmers<br>
+                understand</p>
+        </div>
+    </div>
 </body>
