finish coding about html file

--- a/about.html
+++ b/about.html
@@ -64,4 +64,41 @@
                 understand</p>
         </div>
     </div>
+< <center>
+    <h3 id="intro">My Goals After Morings School</h3>
+        <p>After Moringa school, I plan to be a senior software engineer <br>
+            in a parastatal. I would also love to use my knowledge to inspire<br>
+           the community around me. I plan to start a programming school as a <br>
+            way of inspiring the youth, the poor, and the marginalized<br>
+        </P>
+</center>
+</div>
+<div class="footer">
+    <div id="projects">
+        <h4>My projecs</h4>
+        <ul>
+            <li><a href="https://otybrian.github.io/burgerpalace2/" style="color: white; text-decoration: none;">The Burger project</a></li>
+            <li><a href="https://otybrian.github.io/letuce-eat/" style="color: white; text-decoration: none;">Letuce eat</a></li>
+            <li><a href="https://otybrian.github.io/project-two/" style="color: white; text-decoration: none;">Project2</a></li>
+        </ul>
+    </div>
+    <div id="languages">
+        <h4>Languages used</h4>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JAVASCRIPT</li>
+        </ul>
+    </div>
+    <div id="contact">
+        <h4>Contact Information</h4>
+        <ul>
+            <li>Address: Kasarani, Nairobi-Kenya</li>
+            <li>Email: brian.otieno@student.moringaschool.com</li>
+            <li>Telephone: +254702661411, +254115854571</li>
+        </ul>
+    </div>
+</div>
 </body>
+
+</html>
