--- a/Sign-up.html
+++ b/Sign-up.html
@@ -42,7 +42,7 @@
                     </div>
                   </div>
                   <span class="btn btn-primary" id="add-address">Already have an account?</span>
-                  <button type="submit" class="btn" style="height: 25px; width: 70px; background-color: blue; color: white;"><a href="Login.html">Login</a></button>
+                  <button type="submit" class="btn" style="height: 25px; width: 70px; background-color: blue; color: white;"><a href="Login.html" style="color: white;">Login</a></button>
                 </form>
               </div>
             </div>
