--- a/about.html
+++ b/about.html
@@ -16,15 +16,16 @@
                 <li><a href="index.html">Home</a></li>
                 <li style="margin-left: 50px;"><a href="#">About</a></li>
                 <li><button
-                        style="margin-left: 50px; margin-top: -5px;height: 30px;width: 80px; border: solid blue; border-radius: 15px; color: blue;"><a href="Sign-up.html">Sign in</a>
-                       </button></li>
+                        style="margin-left: 50px; margin-top: -5px;height: 30px;width: 80px; border: solid blue; border-radius: 15px; color: blue;"><a
+                            href="Sign-up.html">Sign in</a>
+                    </button></li>
             </ul>
         </div>
         <center>
             <h3 id="me">ABOUT ME</h3>
             <p id="info">This page is about me; my <strong>educational backgrouns, <br>
-                personal information, what I love about programming,<br>
-                and my career goals after finishing my course at Moringa School</strong></p>
+                    personal information, what I love about programming,<br>
+                    and my career goals after finishing my course at Moringa School</strong></p>
         </center>
     </div>
     <div class="section2">
@@ -44,7 +45,7 @@
         <div id="box">
             <h4>Education Background</h4>
             <p>Currently I'm a student at <br>
-               Moringa school. Before Moringa<br>
+                Moringa school. Before Moringa<br>
                 school, I pursued BSc in Wildlife<br>
                 Management and Conservation at <br>
                 The University of Nairobi.<br>
@@ -64,41 +65,44 @@
                 understand</p>
         </div>
     </div>
-< <center>
-    <h3 id="intro">My Goals After Morings School</h3>
+    < <center>
+        <h3 id="intro">My Goals After Morings School</h3>
         <p>After Moringa school, I plan to be a senior software engineer <br>
             in a parastatal. I would also love to use my knowledge to inspire<br>
-           the community around me. I plan to start a programming school as a <br>
+            the community around me. I plan to start a programming school as a <br>
             way of inspiring the youth, the poor, and the marginalized<br>
         </P>
-</center>
-</div>
-<div class="footer">
-    <div id="projects">
-        <h4>My projecs</h4>
-        <ul>
-            <li><a href="https://otybrian.github.io/burgerpalace2/" style="color: white; text-decoration: none;">The Burger project</a></li>
-            <li><a href="https://otybrian.github.io/letuce-eat/" style="color: white; text-decoration: none;">Letuce eat</a></li>
-            <li><a href="https://otybrian.github.io/project-two/" style="color: white; text-decoration: none;">Project2</a></li>
-        </ul>
-    </div>
-    <div id="languages">
-        <h4>Languages used</h4>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JAVASCRIPT</li>
-        </ul>
-    </div>
-    <div id="contact">
-        <h4>Contact Information</h4>
-        <ul>
-            <li>Address: Kasarani, Nairobi-Kenya</li>
-            <li>Email: brian.otieno@student.moringaschool.com</li>
-            <li>Telephone: +254702661411, +254115854571</li>
-        </ul>
-    </div>
-</div>
+        </center>
+        </div>
+        <div class="footer">
+            <div id="projects">
+                <h4>My projecs</h4>
+                <ul>
+                    <li><a href="https://otybrian.github.io/burgerpalace2/"
+                            style="color: white; text-decoration: none;">The Burger project</a></li>
+                    <li><a href="https://otybrian.github.io/letuce-eat/"
+                            style="color: white; text-decoration: none;">Letuce eat</a></li>
+                    <li><a href="https://otybrian.github.io/project-two/"
+                            style="color: white; text-decoration: none;">Project2</a></li>
+                </ul>
+            </div>
+            <div id="languages">
+                <h4>Languages used</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                </ul>
+            </div>
+            <div id="contact">
+                <h4>Contact Information</h4>
+                <ul>
+                    <li>Address: Kasarani, Nairobi-Kenya</li>
+                    <li>Email: brian.otieno@student.moringaschool.com</li>
+                    <li>Telephone: +254702661411, +254115854571</li>
+                </ul>
+            </div>
+        </div>
 </body>
 
 </html>
