--- a/Login.html
+++ b/Login.html
@@ -23,12 +23,13 @@
                   <div id="new-addresses">
                       <div class="form-group">
                         <label for="new-city">Password</label><br><br>
-                        <input type="text" class="form-control new-city" style="height: 30px; width: 300px;">
-                      </div>
+                        <input type="text" class="form-control new-city" style="height: 30px; width: 300px;"><br><br>
+                        <button type="submit" class="btn" style="height: 25px; width: 70px; border: solid blue;">Login</button> 
+                    </div>
                     </div>
                   </div><br>
                   <span class="btn btn-primary" id="add-address">Sign up instead</span>
-                  <button type="submit" class="btn" style="height: 25px; width: 70px; background-color: blue; color: white;"><a href="Sign-up.html"><a href="Sign-up.html">Sign up<a href="Sign-up.html"></a></button>
+                  <button type="submit" class="btn" style="height: 25px; width: 70px; background-color: blue; color: white;"><a href="Sign-up.html" style="color: white;">Sign up</a></button>
                 </form>
               </div>
             </div>
